syntax = "proto3";

package lospan;

option go_package = "./lospan";

// Application is a logical construct on top of devices. Devices in the same application share the same
// application key
message Application {
    string eui = 1; 
};

// Device is the ... device that connects to the gateway
message Device {
    string eui = 1;
    string application_eui = 2;
};

// UpstreamMessage is a message from one of the devices
message UpstreamMessage{

};

// DownstreamMessage is a message that should be or is sent to one of the devices
message DownstreamMessage{

};

// Gateway is a LoRaWAN gateway/concentrator. 
message Gateway {
    string eui = 1;
    optional string ip = 2; // Strictly not optional but used when updating
    optional bool strict_ip = 3;
    optional float latitude = 4;
    optional float longitude = 5;
    optional float altitude = 6;
};

// GatewayMessage is a monitoring message to and from the gateway. This reflects the LoRaWAN gateway UDP
// protocol which again is more or less a 1:1 representation of the radio traffic with acks on top.
message GatewayMessage{

};
